--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -26,7 +26,7 @@
 					<a href="" class="nav-link">|</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">CART</a>
+					<a href="/cart/cart" class="nav-link">CART</a>
 				</li>
 
 				<li class="nav-item">
@@ -44,7 +44,7 @@
 					<a href="#" class="nav-link">|</a>
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">CART</a>
+					<a href="/cart/cart" class="nav-link">CART</a>
 				</li>
 				<li class="nav-item">
 					<a href="/user/login" class="nav-link">LOGIN</a>
