--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -1,15 +1,12 @@
+
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-content padding-y">
-
-
     <div class="row">
         <div class="col-10">
 
         </div>
         {{!-- <div class="col-2">
-            <button>
-                HELLO
-            </button>
+            <h1>{1}</h1>
         </div> --}}
     </div>
     <div class="container">
@@ -33,51 +30,78 @@
                 <br><br>
                 <hr size="12px" width="100%">
                 <br><br>
+                {{#if orders}}
                 <div class="container">
+                    {{#each order}}
                     <div class="row">
-					<div class="col-sm-2 col-md-2 col-lg-2">
-						<p class="font-italic">No.</p>
-						<p class="text-muted"> 
-							{{replaceCommas orderno}}
-						</p>
-					</div>
-                    <div class="col-sm-2 col-md-2 col-lg-2">
-						<p class="font-italic">Name</p>
-						<p class="text-muted"> 
-							{{replaceCommas product}}
-						</p>
-					</div>
-					<div class="col-sm-2 col-md-2 col-lg-2">
-						<p class="font-italic">Amount</p>
-						<p class="text-muted"> 
-							{{replaceCommas amount}}
-						</p>
-					</div>
-					<div class="col-sm-2 col-md-2 col-lg-2">
-						<p class="font-italic">Price</p>
-						<p class="text-muted"> 
-                            {{replaceCommas price}}
+                        <div class="col-sm-2 col-md-2 col-lg-2">
+                            <p class="font-italic">No.</p>
+                            <p class="text-muted">
+                                {{orderno}}
                             </p>
-					</div>
-					<div class="col-sm-2 col-md-2 col-lg-2">
-						<p class="font-italic">Action</p>
-						<p>
-							<a href="/video/editVideo/{{id}}" class="card-link mb-2">
-								<i class="fas fa-pencil-alt"></i>
-								Edit
-							</a>
-						</p>
-					</div>
-				</div>
+                        </div>
+                        <div class="col-sm-2 col-md-2 col-lg-2">
+                            <p class="font-italic">Name</p>
+                            <p class="text-muted">
+                                {{product}}
+                            </p>
+                        </div>
+                        <div class="col-sm-2 col-md-2 col-lg-2">
+                            <p class="font-italic">Amount</p>
+                            <p class="text-muted">
+                                {{amount}}
+                            </p>
+                        </div>
+                        <div class="col-sm-2 col-md-2 col-lg-2">
+                            <p class="font-italic">Price</p>
+                            <p class="text-muted">
+                                SG ${{price}}
+                            </p>
+                        </div>
+                        <div class="col-sm-2 col-md-2 col-lg-2">
+                            <p class="font-italic">Action</p>
+                            <p>
+                                <a href="/video/editOrder/{{id}}" class="card-link mb-2">
+                                    <i class="fas fa-pencil-alt"></i>
+                                    Edit
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                    {{/each}}
                 </div>
+                {{else}}
+                <div class="row">
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <p class="font-italic">No.</p>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <p class="font-italic">Name</p>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <p class="font-italic">Amount</p>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <p class="font-italic">Price</p>
+                    </div>
+                    <div class="col-sm-2 col-md-2 col-lg-2">
+                        <p class="font-italic">Action</p>
+                    </div>
+                    <br><br><br>
+                    <div class="col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
+                        <h4>There is nothing in your
+                            Shopping Cart yet? <br> Get some bah <i class="fa-solid fa-face-grin-squint-tears"></i></h4>
+                    </div>
+                </div>
+                {{/if}}
 
             </div>
             <div class="col-sm-6">
                 <h5><b>Summary</b></h5>
                 <hr size="12px" width="100%">
                 <div class="row">
-                    <p class="col-sm-3" style="float: left;">Product #1</p>
-                    <p class="col-sm-3" style="float: right;">SG $85.00</p>
+                    <p class="col-sm-3" style="float: left;">{{product}}</p>
+                    <p class="col-sm-3" style="float: right;" id="totalprice">SG $100.00</p>
                 </div>
                 {{!-- <div class="row">
                     <p class="col-sm-3" style="float: left;">Product #2</p>
