--- a/views/cart/cart.handlebars
+++ b/views/cart/cart.handlebars
@@ -61,7 +61,7 @@
                         <div class="col-sm-2 col-md-2 col-lg-2">
                             <p class="font-italic">Action</p>
                             <p>
-                                <a href="/video/editOrder/{{id}}" class="card-link mb-2">
+                                <a href="../cart/editorder.handlebars/{{id}}" class="card-link mb-2">
                                     <i class="fas fa-pencil-alt"></i>
                                     Edit
                                 </a>
