--- a/views/quiz/listQuizzes.handlebars
+++ b/views/quiz/listQuizzes.handlebars
@@ -21,13 +21,13 @@
                     <div class="col-sm-12 col-md-12 col-lg-3">
                         <p class="font-italic">tcm</p>
                         <p class="text-info">
-                            {{tcmKnowledge}}
+                            {{supplements}}
                         </p>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-3">
                         <p class="font-italic">supplements</p>
                         <p class="text-info">
-                            {{supplements}}
+                            {{area}}
                         </p>
                     </div>
         </div>
