--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -30,7 +30,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="/staff/register">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>Register Staff</span></a>
             </li>
             <!-- Heading -->
             <div class="sidebar-heading">
