--- a/views/staff/login.handlebars
+++ b/views/staff/login.handlebars
@@ -1,16 +1,7 @@
 <body id="staffpg">
-<div class="container">
-
-    <!-- Outer Row -->
-    {{!-- <div class="row justify-content-center"> --}}
-
-        <div class="col-md-9 cen2">
-
-            <div class="card card-body" style="border-radius: 60px ; top: 100px; ">
-                <!-- Nested Row within Card Body -->
-                <div class="row">
-                    {{!-- <div class="col-lg-6"> --}}
-                        <div class="p-5">
+<div class="row">
+	<div class="col-md-6 mx-auto">
+		<div class="card card-body" style="border-radius: 60px ; top: 100px">
                             <div class="text-center">
                                 <img class="logo2" src="/img/whitelogo.png">
                                 <h1 class="h4 text-gray-900 mb-4" style="padding-top: 15px;">STAFF LOGIN</h1>
