--- a/views/quiz/addQuiz.handlebars
+++ b/views/quiz/addQuiz.handlebars
@@ -1,20 +1,31 @@
+<link rel="stylesheet" href="/css/quiz.css">
+
 <style>
+body {
+    text-align: center;
+}
    /* Style the form */
 #regForm {
-  background-color: #ffffff;
-  margin: 0 auto;
-  padding: 40px;
-  width: 70%;
-  min-width: 300px;
+    background-image: url("/img/account-page.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* background-position: 0% 0%; */
+    background-position: center;
+    top: 50%;
+    left: 50%;
+    padding: 100px;
 }
 
 /* Style the input fields */
 input {
-  padding: 10px;
-  width: 100%;
-  font-size: 17px;
-  font-family: Raleway;
-  border: 1px solid #aaaaaa;
+    border: 2px solid #E8DCD0;
+    border-radius: 30px;
+    background-color: #E8DCD0;
+    width: 500px;
+    height: 50px;
+    display: inline-block;
+    font-size: 25px;
+    text-align: center;
 }
 
 /* Mark input boxes that gets an error on validation: */
@@ -24,7 +35,12 @@ input.invalid {
 
 /* Hide all steps by default: */
 .tab {
-  display: none;
+    display: none;
+    font-family: 'Libre Baskerville';
+    font-style: italic;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 60px;
 }
 
 /* Make circles that indicate the steps of the form: */
@@ -48,6 +64,150 @@ input.invalid {
 .step.finish {
   background-color: #4CAF50;
 }
+
+button {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    background-color: #8BAD97;
+    border: 5px;
+    border-radius: 45px;
+    padding: 15px;
+    cursor: pointer;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+button:hover {
+    background-color: #bdd4c5;;
+}
+
+input[type="radio"] {
+    appearance: none;
+}
+
+input[type="radio"]{
+    cursor: pointer;
+    position: relative;
+    padding-left: 30px;
+    line-height: 20px;
+}
+
+input[type="radio"]::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    aspect-ratio: 1;
+    border: 1px solid #000000;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+input[type="radio"]::after {
+    content: "";
+    display: inline-block;
+    width: 10px;
+    aspect-ratio: 1;
+    border: 1px solid #8BAD97;
+    background: #8BAD97;
+    border-radius: 50%;
+    position: absolute;
+    left: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+input[type="radio"]:checked::after {
+    opacity: 1;
+}
+
+.option {
+    line-height: 1.5;
+    font-size: 24px;
+}
+
+.list {
+  margin-top:40px;
+  display:flex;
+  justify-content:center;
+  flex-wrap:wrap;
+  gap:20px;
+  text-align: center;
+  margin:0px;
+  padding:0px;
+  box-sizing:border-box;
+}
+.list .form-element {
+  position:relative;
+  width:100px;
+  height:100px;
+}
+.form-element input {
+  display:none;
+}
+.form-element label {
+  width:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  height:100%;
+  cursor:pointer;
+  border:2px solid #ddd;
+  background:#fff;
+  box-shadow:0px 5px 20px 2px rgba(0,0,0,0.1);
+  text-align:center;
+  transition:all 200ms ease-in-out;
+  border-radius:5px;
+}
+.form-element .icon {
+  {{!-- margin-top:10px; --}}
+  font-size:30px;
+  color:rgb(248, 0, 0);
+  transition:all 200ms ease-in-out;
+}
+.form-element .title {
+  font-size:15px;
+  color:#555;
+  transition:all 200ms ease-in-out;
+}
+.form-element label:before {
+  content:"✓";
+  position:absolute;
+  width:18px;
+  height:18px;
+  top:8px;
+  left:8px;
+  background:#0d0df1;
+  color:#fff;
+  text-align:center;
+  line-height:18px;
+  font-size:14px;
+  font-weight:600;
+  border-radius:50%;
+  opacity:0;
+  transform:scale(0.5);
+  transition:all 200ms ease-in-out;
+}
+.form-element input:checked + label:before {
+  opacity:1;
+  transform:scale(1);
+}
+.form-element input:checked + label .icon {
+  color:#0d0df1;
+}
+.form-element input:checked + label .title {
+  color:#0d0df1;
+}
+.form-element input:checked + label {
+  border:2px solid #0d0df1;
+}
+
 </style>
 
 {{!-- <body>
@@ -142,41 +302,110 @@ input.invalid {
 
 </body> --}}
 
-<form id="regForm" action="">
+<form id="regForm" action="" method="POST">
 
-    <h1>Register:</h1>
+    <p>Personalization Quiz</p>
 
     <!-- One "tab" for each step in the form: -->
-    <div class="tab">Name:
-        <p><input placeholder="First name..." oninput="this.className = ''"></p>
-        <p><input placeholder="Last name..." oninput="this.className = ''"></p>
+    <div class="tab">Name your quiz:
+        <p><input placeholder="Chantalle's Headache Remedy" oninput="this.className = ''" name="quizName"></p>
     </div>
 
-    <div class="tab">Contact Info:
-        <p><input placeholder="E-mail..." oninput="this.className = ''"></p>
-        <p><input placeholder="Phone..." oninput="this.className = ''"></p>
+    <div class="tab">What is your age?
+        <p><input placeholder="35" oninput="this.className = ''" name="age"></p>
     </div>
 
-    <div class="tab">Birthday:
-        <p><input placeholder="dd" oninput="this.className = ''"></p>
-        <p><input placeholder="mm" oninput="this.className = ''"></p>
-        <p><input placeholder="yyyy" oninput="this.className = ''"></p>
+    {{!-- <div class="tab">When is your birthday?
+        <p><input type="date" oninput="this.className = ''"></p>
+    </div> --}}
+
+    <div class="tab">When it comes to traditional chinese medicine, you:
+        <label class="option" id="border">
+            <input type="radio" name="option" value="1"/>
+            <span class="option1">Know more than the average person.</span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="option" value="1" />
+            <span class="option1">Know a bit, but want to learn more.</span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="option" value="1" />
+            <span class="option1">Are not convinced yet</span>
+        </label>
     </div>
 
-    <div class="tab">Login Info:
-        <p><input placeholder="Username..." oninput="this.className = ''"></p>
-        <p><input placeholder="Password..." oninput="this.className = ''"></p>
+    <div class="tab">Have you taken supplements/ traditional chinese medicine in the past?
+        <label class="option" id="border">
+            <input type="radio" name="supplements" value="yes" />
+            <span class="option1">For a while</span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="supplements" value="sometimes" />
+            <span class="option1">On and Off</span>
+        </label>
+        <br>
+        <label class="option" id="border">
+            <input type="radio" name="supplements" value="never" />
+            <span class="option1">Never</span>
+        </label>
     </div>
+
+    <div class="tab">Which areas of health are you looking to improve?
+            <p>You can choose more than 1 area.</p>
+            <div class="list">
+                <div class="form-element">
+                    <input type="checkbox" name="area" value="immunity" id="immunity">
+                    <label for="immunity">
+                        <div class="icon">
+                            <i class="fa-solid fa-syringe"></i>
+                        </div>
+                        <div class="title">
+                            Immunity
+                        </div>
+                    </label>
+                </div>
+                <div class="form-element">
+                    <input type="checkbox" name="area" value="hair" id="hair">
+                    <label for="hair">
+                        <div class="icon">
+                            <i class="fa-solid fa-syringe"></i>
+                        </div>
+                        <div class="title">
+                            Hair
+                        </div>
+                    </label>
+                </div>
+                <div class="form-element">
+                    <input type="checkbox" name="area" value="stress" id="stress">
+                    <label for="stress">
+                        <div class="icon">
+                            <i class="fa-solid fa-syringe"></i>
+                        </div>
+                        <div class="title">
+                            Stress
+                        </div>
+                    </label>
+                </div>
+            </div>
+        {{!-- </div> --}}
+    </div>
+
+    <br>
+    <br>
 
     <div style="overflow:auto;">
-        <div style="float:right;">
+        <div style="float:center;">
             <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
-            <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+            <button type="button" id="nextBtn" onclick="nextPrev(1)">Next<i class="fa-solid fa-arrow-right"></i></button>
         </div>
     </div>
 
     <!-- Circles which indicates the steps of the form: -->
     <div style="text-align:center;margin-top:40px;">
+        <span class="step"></span>
         <span class="step"></span>
         <span class="step"></span>
         <span class="step"></span>
