--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -116,7 +116,7 @@
 
 
 	<!-- Custom JS -->
-	{{!-- <script src="/js/common.js"></script> --}}
+	<script src="/js/common.js"></script>
 </body>
 
 </html>
