--- a/views/partials/_accountnav.handlebars
+++ b/views/partials/_accountnav.handlebars
@@ -19,7 +19,7 @@
             <br>
 
             <li class="nav-item">
-                <a class="nav-link" href="/">PERSONALISATION</a>
+                <a class="nav-link" href="/quiz/listQuizzes">PERSONALISATION</a>
             </li>
         </ul>
 
