--- a/views/quiz/listQuizzes.handlebars
+++ b/views/quiz/listQuizzes.handlebars
@@ -1,48 +1,81 @@
-{{!-- <div class="container"> --}}
-    {{#if quizzes}}
-    <div class="card card-body">
-        <h3 class="text-primary">Quiz</h3>
-        {{#each quizzes}}
-        <div class="card border-primary mb-2 w-100 mx-auto">
-            <div class="card-body">
-                <a href="/quiz/editQuiz/{{id}}" class="card-link mb-2">
-                    <i class="fas fa-pencil-alt"></i>
-                    Edit
-                </a>
-                <a href="/quiz/deleteQuiz/{{id}}" class="card-link" data-toggle="con-
-                firmation" data-title="Confirm delete?">
-                    <i class="far fa-trash-alt"></i>
-                    Delete
-                </a>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <p class="font-italic">Name</p>
-                        <p class="text-info">
-                            {{quizName}}
-                        </p>
+<div class="container">
+    {{#if user}}
+    {{> _accountnav }}
+    <div class="besidenav">
+        <h1 class="card-title" id="top">Quiz Library</h1>
+        <button type="button" class="btn btn-lg btn-addQuiz" id="top"><a href="/quiz/addQuiz">Start Quiz</a></button>
+        {{#if quizzes}}
+            {{#each quizzes}}
+            {{!-- <div class="card border-primary mb-2 w-100 mx-auto"> --}}
+                <div class="card-body">
+                    <a href="/quiz/editQuiz/{{id}}" class="card-link mb-2">
+                        <i class="fas fa-pencil-alt"></i>
+                        Edit
+                    </a>
+                    <a href="/quiz/deleteQuiz/{{id}}" class="card-link" data-toggle="con-
+                        firmation" data-title="Confirm delete?">
+                        <i class="far fa-trash-alt"></i>
+                        Delete
+                    </a>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-12 col-lg-3">
+                            <p class="font-italic">Name</p>
+                            <p class="text-info">
+                                {{quizName}}
+                            </p>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-3">
+                            <p class="font-italic">age</p>
+                            <p class="text-info">
+                                {{age}}
+                            </p>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-3">
+                            <p class="font-italic">supplements</p>
+                            <p class="text-info">
+                                {{supplements}}
+                            </p>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-3">
+                            <p class="font-italic">health area</p>
+                            <p class="text-info">
+                                {{area}}
+                            </p>
+                        </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <p class="font-italic">age</p>
-                        <p class="text-info">
-                            {{age}}
-                        </p>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <p class="font-italic">supplements</p>
-                        <p class="text-info">
-                            {{supplements}}
-                        </p>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-3">
-                        <p class="font-italic">health area</p>
-                        <p class="text-info">
-                            {{area}}
-                        </p>
-                    </div>
-        </div>
-        {{/each}}
-    </div>
-    {{else}}
-    <h3>No quiz</h3>
+                    {{/each}}
+                </div>
+                <div>
+                    {{else}}
+                    <h3 class="noQuiz">No quiz</h3>
+                </div>
+            {{/if}}
+
+            
     {{/if}}
+    </div>
 </div>
+<style>
+    .noQuiz {
+        text-align: center;
+    }
+
+    .btn-addQuiz{
+		color: #000000;
+		background: #8BAD97;
+		border-radius: 60px;
+		width: 200px;
+        text-align: center;
+        float: right;
+    }
+
+    #top {
+        display: inline;
+    }
+
+</style>
+<script>
+    $('[data-toggle=confirmation]').confirmation({
+        rootSelector: '[data-toggle=confirmation]',
+    });
+</script>
