--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -8,7 +8,7 @@
 					SG$0.9/day. Monthly deliveries. Adjust anytime. 
 				</p>
 				<button type="button" class="btn btn-lg btn-landing" data-bs-toggle="modal" data-bs-target="">
-					<a href="/quiz">Start Quiz</a>
+					<a href="/quiz/addQuiz">Start Quiz</a>
 				</button>
 			</div>
 			<img class="img-fluid d-none d-sm-block" src='img/landing-page.png' title='' />
