more quiz + staffMain

--- a/views/layouts/staffMain.handlebars
+++ b/views/layouts/staffMain.handlebars
@@ -33,6 +33,7 @@
     {{> _flashmsg }}
     {{> _staffnav }}
     {{{body}}}
+    {{> _staffFooter }}
 
     <!-- Bootstrap core JavaScript-->
     <script src="/vendor/jquery/jquery.min.js"></script>
