--- a/views/partials/_accountnav.handlebars
+++ b/views/partials/_accountnav.handlebars
@@ -1,29 +1,60 @@
-<nav class="accnav">
-    <div class="container">
-        <h4>MY ACCOUNT</h4>
-        <br>
+<body id="page-top">
 
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="/user/profile">PROFILE</a>
-            </li>
-            <br>
-            <li class="nav-item">
-                <a class="nav-link" href="/">ORDER</a>
-            </li>
-            <br>
+    <!-- Page Wrapper -->
+    <div id="wrapper">
 
-            <li class="nav-item">
-                <a class="nav-link" href="/">VOUCHER</a>
-            </li>
-            <br>
+        <!-- Sidebar -->
+        <ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar" style="background-color:#E8DCD0; ">
 
-            <li class="nav-item">
-                <a class="nav-link" href="/quiz/listQuizzes">PERSONALISATION</a>
+            <!-- Sidebar - Brand -->
+                <h4 style="padding-top: 35px; text-align:center">MY ACCOUNT</h4>
+
+
+            <!-- Divider -->
+            <hr>
+
+            <li class="nav-item"  >
+                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="/user/profile">
+                   PROFILE</a>
             </li>
+
+            <!-- Divider -->
+            <hr>
+                  <li class="nav-item"  >
+                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="">
+                   ORDER</a>
+            </li>
+
+
+            <hr>
+                  <li class="nav-item"  >
+                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="">
+                   VOUCHER</a>
+            </li>
+
+            <hr>
+                  <li class="nav-item"  >
+                <a class="nav-link " style="left:15px; color:black; font-weight:bold;" href="">
+                   PERSONALISATION</a>
+            </li>
+
+
+         
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+
+
         </ul>
+        <!-- End of Sidebar -->
 
-    </div>
-</nav>
-{{!--
-<hr style="height:1px;border:none;color:#333;background-color:#333;" /> --}}
+
+
+
+
+
+
+</body>
+
+</html>
