--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -1,9 +1,9 @@
-<div class="container">
-	{{#if user}}
-	{{> _accountnav }}
-	<div class="besidenav" >
+<div style="padding-left:50px;">
+<div class="container besidenav" style="padding-left:70px; width: 200%">
 
-		<h4 class="card-title">PROFILE</h4>
+	<div >
+
+		<h4 class="card-title" style="padding-left:20px;">PROFILE</h4>
 		
 			<div style="font-size:20px;  float: right;" >
 				<div >
@@ -77,7 +77,7 @@
 
 </div>
 
-{{/if}}
+</div>
 
 <script>
 	$('[data-toggle=confirmation]').confirmation({
