acct nav things + quiz when empty

--- a/views/layouts/account.handlebars
+++ b/views/layouts/account.handlebars
@@ -76,16 +76,6 @@
             font-family: 'Poppins';
         }
 
-        .btn-landing {
-            color: #000000;
-            background: #8BAD97;
-            border-radius: 60px;
-            width: 265px;
-            height: 62px;
-            left: 100px;
-            top: 564px;
-        }
-
         .btn-subscribe {
             color: #000000;
             background: #8BAD97;
@@ -110,7 +100,9 @@
 
         {{> _flashmsg }}
         {{> _accountnav}}
-        {{{ body}}}
+        <div class="container-besidenav">
+            {{{ body }}}
+        </div>
 
 
 
