--- a/views/quiz/addQuiz.handlebars
+++ b/views/quiz/addQuiz.handlebars
@@ -390,7 +390,7 @@ input[type="radio"]:checked::after {
                     <input type="checkbox" name="area" value="hair" id="hair">
                     <label for="hair">
                         <div class="icon">
-                            <i class="fa-brands fa-apple-pay"></i>
+                            <i class="fa-solid fa-person"></i>
                             <p class="title">Hair</p>
                         </div>
                     </label>
