--- a/views/user/profile.handlebars
+++ b/views/user/profile.handlebars
@@ -1,5 +1,4 @@
-<div style="padding-left:50px;">
-<div class="container besidenav" style="padding-left:70px; width: 200%">
+{{!-- <div class="container besidenav" style="padding-left:70px; width:max-content;"> --}}
 
 	<div >
 
