--- a/public/css/style.css
+++ b/public/css/style.css
@@ -334,14 +334,13 @@ p {
   float: left;
 }
 
-.besidenav{
+.container-besidenav{
   background-color:#E8DCD0;
-  padding: 35px;
-  /* display: flex; 
+  padding: 35px; 
   position: relative; 
   width: 100%; 
-  margin-left: 320px;
-  height: 500px; */
+  margin-left: 30px;
+  height:fit-content;
 }
 
 #mytxt
