lolol i forgot to remove nodemods

--- a/views/product/catalogue.handlebars
+++ b/views/product/catalogue.handlebars
@@ -25,7 +25,7 @@
                 <figure class="card card-product-grid">
                     <div class="img-wrap">
                         <span class="badge badge-danger"> NEW </span>
-                        <img src="images/items/1.jpg">
+                        <img src="images/items/cordyceps.jpg">
                     </div> <!-- img-wrap.// -->
                     <figcaption class="info-wrap">
                         <a href="#" class="title mb-2">Hot sale unisex New Design Shirt for sport polo shirts latest
